# pytest-framework-selenium

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows /: flake8.yaml  mypy.yaml  pycodestyle.yaml  pylint.yaml
source/: calculator.py
source/pages/: base.py  login_page.py  product_list_page.py
test_data/: constants.py  login_creds.py
tests/: conftest.py
tests/ui/: test_login.py  test_product_list_page.py
tests/unit/: test_calculator.py
